# 04-deep-learning

./: README.md
at&t-spam-detector/: Makefile  README.md  pyproject.toml
at&t-spam-detector/at&t_spam_detector/: __init__.py  dataset.py  features.py  plots.py
at&t-spam-detector/at&t_spam_detector/modeling/: predict.py  train.py
at&t-spam-detector/docs/: mkdocs.yml
at&t-spam-detector/docs/docs/: index.md
