[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "at\u0026t_spam_detector"
version = "0.0.1"
description = "AT\u0026T needs an automated SMS spam detector. This project involves building and training a deep learning model to classify messages as spam or ham based on content, using a given dataset, and clearly stating the model's performance."
authors = [
  { name = "nclsprsnw" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["at&t_spam_detector"]
include = ["pyproject.toml", "at&t_spam_detector/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["at&t_spam_detector"]
force-sort-within-sections = true

